--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         body {
             font-family: "Helvetica Neue", Verdana, sans-serif;
         }
-
         table {
             border-collapse: collapse;
             width: 100%;
@@ -18,7 +17,6 @@
             border-radius: 5px;
             margin: 50px 0;
         }
-
         input {
             font-size: 16px;
             padding: 5px 7px;
@@ -30,11 +28,9 @@
             border-bottom: 2px solid rgba(0, 0, 0, 0.1);
             color: rgba(0, 0, 0, 0.8);
         }
-
         tr:not(:last-of-type) {
             border-bottom: 1px solid map-get($border-color, light);
         }
-
         td {
             padding: 16px 12px 14px;
         }
@@ -44,8 +40,65 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+                <pre>{{ form | json }}</pre>
+                <div>
+                    Username:
+                    <input
+                        type="text"
+                        name="username"
+                        minlength="3"
+                        maxlength="20"
+                        required="required"
+                        ng-model="ctrl.username" />
 
+                    <div ng-if="form.username.$touched">
+                        <div ng-if="form.username.$error.required">
+                            Username is required!
+                        </div>
+                        <div ng-if="form.username.$error.minlength">
+                            Username must be more than 3 characters!
+                        </div>
+                        <div ng-if="form.username.$error.maxlength">
+                            Username must be less than 20 characters!
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    Password
+                    <input
+                        type="password"
+                        name="password"
+                        minlength="8"
+                        required="required"
+                        ng-model="ctrl.password" />
+
+                    <div ng-if="form.password.$touched">
+                        <div ng-if="form.password.$error.required">
+                            Password is required!
+                        </div>
+                        <div ng-if="form.password.$error.minlength">
+                            Password must be more than 8 characters!
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    Email
+                    <input
+                        type="email"
+                        name="email"
+                        required="required"
+                        ng-model="ctrl.email" />
+
+                    <div ng-if="form.email.$touched">
+                        <div ng-if="form.email.$error.required">
+                            Email is required!
+                        </div>
+                        <div ng-if="form.email.$error.email">
+                            Email must be valid!
+                        </div>
+                    </div>
+                </div>
             </form>
         </div>
     </div>
