--- a/index.html
+++ b/index.html
@@ -44,7 +44,32 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+                <input type="text"
+                name="username"
+                ng-model="ctrl.username"
+                ng-minlength="3"
+                ng-maxlength="20"
+                ng-required="required" />
+                <div ng-if="form.username.$touched">
+                    <div ng-show="form.username.$error.required">
+                        Username is required!
+                    </div>
+                    <div ng-show="form.username.$error.minlength">
+                        Username must be more than 3 characters!
+                    </div>
+                    <div ng-show="form.username.$error.maxlength">
+                        Username must be less than 20 characters!
+                    </div>
+                </div>
+                <input type="text"
+                name="password"
+                ng-model="ctrl.password"
+                ng-minlength="8"
+                ng-required="required" />
+                <div ng-show="form.username.$error.minlength">
+                    Username must be more than 8 characters!
+                </div>
 
             </form>
         </div>
