--- a/index.html
+++ b/index.html
@@ -44,7 +44,51 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name = "form">
+                
+                <div>
+                    Username:
+                    <input 
+                        name = "username" 
+                        required="required"
+                        ng-minlength = "3"
+                        ng-maxlength = "20" 
+                        ng-model = "ctrl.username"
+                    />
+                    
+                    <div ng-if = "form.username.$touched">
+                        <div ng-if="form.username.$error.required">Username is required</div>
+                        <div ng-if = "form.username.$error.minlength || form.username.$error.maxlength">Username must be between 3 and 20 characters</div>
+                    </div>
+                </div>
+
+                <div>
+                    Password:
+                    <input
+                        name="password"
+                        required = "required"
+                        minlength = "8"
+                        ng-model = "ctrl.password"
+                    />
+                    <div ng-if = "form.password.$touched">
+                        <div ng-if = "form.password.$error.required">Password is required</div>
+                        <div ng-if="form.password.$error.minlength">Password must be at least 8 characters long</div>
+                    </div>
+                </div>
+
+                <div>
+                    Email:
+                    <input 
+                        name="email"
+                        required = "required"
+                        type = "email"
+                        ng-model = "ctrl.email"
+                    />
+                    <div ng-if = "form.email.$touched">
+                        <div ng-if="form.email.$error.required"> Email is required</div>
+                        <div ng-if = "form.email.$error.email">Invalid email format</div>
+                    </div>
+                </div>
 
             </form>
         </div>
