--- a/index.html
+++ b/index.html
@@ -44,7 +44,44 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+
+              <div>Username (between 3 and 20 characters):
+                <input name="username" ng-model="ctrl.username" required="required" ng-minlength="3" ng-maxlength="20"/>
+                <div ng-if="form.username.$touched">
+                    <div ng-if="form.username.$error.required">
+                        Username is required!
+                    </div>
+                    <div ng-if="form.username.$error.minlength">
+                        Username must be more than 3 characters!
+                    </div>
+                    <div ng-if="form.username.$error.maxlength">
+                        Username must be less than 20 characters!
+                    </div>
+                </div>
+
+              <div>Password (min. length 8 characters):
+                <input name="password" ng-model="ctrl.password" required="required" ng-minlength="8"/>
+                <div ng-if="form.password.$touched">
+                  <div ng-if="form.password.$error.required">
+                    password is required
+                  </div>
+                  <div ng-if="form.password.$error.minlength">
+                    password must be a minimum of 8 characters.
+                  </div>
+                </div>
+              </div>
+
+              <div>Email:
+                <input name="email" ng-model="ctrl.email" required="required" type="email"/>
+                <div ng-if="form.email.$touched"> 
+                  <div ng-if="form.email.$error.required">
+                    email is required
+                  </div>
+                  <div ng-if="form.email.$error.email">
+                    must be valid email address
+                  </div>
+              </div>
 
             </form>
         </div>
