--- a/index.html
+++ b/index.html
@@ -44,9 +44,44 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+                <input ng-model="ctrl.username" name="username" minlength="3" maxlength="20" required="required" />
+                <div ng-if="form.username.$touched">
+                    <div ng-if="form.username.$error.required">
+                        Username is required.
+                    </div>
+                    <div ng-if="form.username.$error.minlength">
+                        Username must be at least 3 characters.
+                    </div>
+                    <div ng-if="form.username.$error.maxlength">
+                        Username cannot exceed 20 characters.
+                    </div>
+                </div>
 
+                <input ng-model="ctrl.email" type="email" name="email" required="required" />
+                <div ng-if="form.email.$touched">
+                    <div ng-if="form.email.$error.required">
+                        Email is required.
+                    </div>
+                    <div ng-if="!form.email.$valid">
+                        That's not a valid email.
+                    </div>
+                </div>
+
+                <input ng-model="ctrl.password" name="password" minlength="8" required="required" />
+                <div ng-if="form.password.$touched">
+                    <div ng-if="form.password.$error.required">
+                        Password is required.
+                    </div>
+                    <div ng-if="form.password.$error.minlength">
+                        Password must be at least 8 characters.
+                    </div>
+                </div>
+
+                <input type="submit" value="Submit" name="submit">
+                
             </form>
+
         </div>
     </div>
 
