--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
 <head>
@@ -10,7 +11,6 @@
         body {
             font-family: "Helvetica Neue", Verdana, sans-serif;
         }
-
         table {
             border-collapse: collapse;
             width: 100%;
@@ -18,7 +18,6 @@
             border-radius: 5px;
             margin: 50px 0;
         }
-
         input {
             font-size: 16px;
             padding: 5px 7px;
@@ -30,11 +29,9 @@
             border-bottom: 2px solid rgba(0, 0, 0, 0.1);
             color: rgba(0, 0, 0, 0.8);
         }
-
         tr:not(:last-of-type) {
             border-bottom: 1px solid map-get($border-color, light);
         }
-
         td {
             padding: 16px 12px 14px;
         }
@@ -44,8 +41,30 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+              <input type="text" name="username" placeholder="username"
+                required="required" minlength="3" maxlength="20" ng-model="ctrl.username">
+                <div class="message">
+                  <div ng-if="form.username.$touched && (form.username.$error.minlength || form.username.$error.required)">
+                    Username is required and must be at least 3 characters!
+                  </div>
+                </div>
 
+              <input type="password" name="password" placeholder="password"
+                required="required" minlength="8" ng-model="ctrl.password">
+              <div class="message">
+                <div ng-if="form.password.$touched && (form.password.$error.minlength || form.password.$error.required)">
+                  Password is required and must be at least 8 characters!
+                </div>
+              </div>
+
+              <input type="email" name="email" placeholder="email"
+                required="required" ng-model="ctrl.email">
+              <div class="message">
+                <div ng-if="form.email.$touched && (form.email.$error.required || form.email.$invalid)">
+                  A valid email is required!
+                </div>
+              </div>
             </form>
         </div>
     </div>
