--- a/index.html
+++ b/index.html
@@ -44,9 +44,57 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+          <form name="form">
+            <div>
+              Username:
+              <input
+                  name="username"
+                  required="required"
+                  minlength="3"
+                  maxlength="20"
+                  ng-model="ctrl.username" />
+                  <div ng-if="form.username.$touched">
+                    <div ng-if="form.username.$touched && form.username.$error.required">
+                        Username is required!
+                    </div>
 
-            </form>
+                    <div ng-if="form.username.$touched && form.username.$error.minlength">
+                        Username must be longer than 3 characters!
+                    </div>
+
+                  </div>
+            </div>
+              <input
+                  name="password"
+                  required="required"
+                  minlength="8"
+                  ng-model="ctrl.password" />
+                  <div ng-if="form.password.$touched">
+                    <div ng-if="form.password.$touched && form.password.$error.required">
+                        Password is required!
+                    </div>
+
+                    <div ng-if="form.password.$touched && form.password.$error.minlength">
+                        Password must be longer than 8 characters!
+                    </div>
+
+                  </div>
+              <input
+                  name="email"
+                  required="required"
+                  type='email'
+                  ng-model="ctrl.email" />
+                  <div ng-if="form.email.$touched">
+                    <div ng-if="form.email.$touched && form.email.$error.required">
+                        Email is required!
+                    </div>
+
+                    <div ng-if="form.email.$touched && form.email.$error.email">
+                        Email not valid!
+                    </div>
+
+                  </div>
+          </form>
         </div>
     </div>
 
