--- a/index.html
+++ b/index.html
@@ -44,8 +44,51 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
-
+            <form name="form">
+                <input 
+                    name="username"
+                    required="required"
+                    maxlength="20"
+                    minlength="3"
+                    ng-model="ctrl.username" />
+                <div ng-if="form.username.$touched">
+                    <div ng-if="form.username.$error.required">
+                        A username is required.
+                    </div>
+                    <div ng-if="form.username.$error.minlength">
+                        Username needs to be more than 3 characters long!
+                    </div>
+                    <div ng-if="form.username.$error.maxlength">
+                        Username needs to be less than 20 characters long!
+                    </div>
+                </div>
+                <input 
+                    name="password"
+                    required="required"
+                    minlength="8"
+                    type="password"
+                    ng-model="ctrl.password" />
+                <div ng-if="form.password.$touched">
+                    <div ng-if="form.password.$error.required">
+                        A password is required.
+                    </div>
+                    <div ng-if="form.password.$error.minlength">
+                        The password must be longer than 8 characters.
+                    </div>
+                </div>
+                <input 
+                    name="email"
+                    required="required"
+                    type="email"
+                    ng-model="ctrl.email" />
+                <div ng-if="form.email.$touched">
+                    <div ng-if="form.email.$error.required">
+                        An email is required.
+                    </div>
+                    <div ng-if="form.email.$error.email">
+                        The email address must be valid.
+                    </div>
+                </div>
             </form>
         </div>
     </div>
