--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         body {
             font-family: "Helvetica Neue", Verdana, sans-serif;
         }
-
         table {
             border-collapse: collapse;
             width: 100%;
@@ -18,7 +17,6 @@
             border-radius: 5px;
             margin: 50px 0;
         }
-
         input {
             font-size: 16px;
             padding: 5px 7px;
@@ -30,11 +28,9 @@
             border-bottom: 2px solid rgba(0, 0, 0, 0.1);
             color: rgba(0, 0, 0, 0.8);
         }
-
         tr:not(:last-of-type) {
             border-bottom: 1px solid map-get($border-color, light);
         }
-
         td {
             padding: 16px 12px 14px;
         }
@@ -44,9 +40,57 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+          <form name="form">
+            <div>
+              Username:
+              <input
+                  name="username"
+                  required="required"
+                  minlength="3"
+                  maxlength="20"
+                  ng-model="ctrl.username" />
+                  <div ng-if="form.username.$touched">
+                    <div ng-if="form.username.$touched && form.username.$error.required">
+                        Username is required!
+                    </div>
 
-            </form>
+                    <div ng-if="form.username.$touched && form.username.$error.minlength">
+                        Username must be longer than 3 characters!
+                    </div>
+
+                  </div>
+            </div>
+              <input
+                  name="password"
+                  required="required"
+                  minlength="8"
+                  ng-model="ctrl.password" />
+                  <div ng-if="form.password.$touched">
+                    <div ng-if="form.password.$touched && form.password.$error.required">
+                        Password is required!
+                    </div>
+
+                    <div ng-if="form.password.$touched && form.password.$error.minlength">
+                        Password must be longer than 8 characters!
+                    </div>
+
+                  </div>
+              <input
+                  name="email"
+                  required="required"
+                  type='email'
+                  ng-model="ctrl.email" />
+                  <div ng-if="form.email.$touched">
+                    <div ng-if="form.email.$touched && form.email.$error.required">
+                        Email is required!
+                    </div>
+
+                    <div ng-if="form.email.$touched && form.email.$error.email">
+                        Email not valid!
+                    </div>
+
+                  </div>
+          </form>
         </div>
     </div>
 
